Added feature to let pass a aws region duirng the API call.
